[tool.poetry]
name = "kaggle-digit-recognizer"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Keras = "^2.4.3"
numpy = "^1.19.4"
scipy = "^1.5.4"
ipykernel = "^5.4.2"
tensorflow = "^2.4.0"
Pillow = "^8.0.1"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
